--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.81.1",
     "date-fns": "^3.0.0",
-    "next": "^15.5.9",
+    "next": "14.1.4",
     "next-auth": "^5.0.0-beta.30",
-    "react": "^19.2.3",
+    "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^15.5.9",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
